<resources>
    <string name="app_name">Lifeline</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registration_successful">User has been registered</string>
    <string name="verify_email_unsuccessful">Verification email unsent. Please try again</string>
    <string name="verify_email_successful">Verification email sent. Verify and Login</string>
    <string name="wrong_username_password">Wrong email or password</string>
    <string name="email_unverified">Email unverified</string>


    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_user">Hello user</string>
    <string name="donate_blood">Donate blood</string>
    <string name="donate_plasma">Donate plasma</string>
    <string name="oxygen_cylinder">Oxygen cylinder Requirement</string>
    <string name="know_more">Know more</string>
    <string name="nhelp_someone_and_be_a_part_of_their_happiness">\nHelp someone and be a part of their happiness</string>
    <string name="edit_details">Edit Details</string>
    <string name="developers_details">Adarsh Singh Kushwah  (adarsh21111@iiitd.ac.in)\nAkash Rawat           (akash21005@iiid.ac.in)\nCharisha Phirani      (charisha21117@iiitd.ac.in)\nDhiraj Prakash Jain   (dhiraj21030@iiitd.ac.in)\nShubham Rana          (shubham21092@iiitd.ac.in)\n</string>
    <string name="about_developers">  About developers</string>
    <string name="app_detailing">Lifeline is an android application for urgent medical help such as blood, plasma, medical aids, etc. It also connects people willing to help others in medical assistance in their nearby location. During Covid-19, there was a massive shortage of medical aids. There was a lack of communication between the people who needed medical assistance and those who were there to help. It was difficult for people to reach out for help when they needed plasma/blood/oxygen etc. So, the Lifeline app provides a platform to solve and overcome such issues. The application offers secure and encrypted authentication for the user registration using the firebase authentication technology, built by the same team who developed google sign-in. The application provides a user-friendly interface for interacting with the user function such as blood and plasma need, self-assessment test for the covid-19, gaining some details about the medical field scenario in India. The application connects the users through the google maps API, which helps users track location distance to provide needed help on time. Lifeline aims to build a communication channel and a reliable platform for delivering medical aids to patients.\n</string>
    <string name="about_lifeLine">  About Lifeline</string>


    <string name="donate_blood1">Donate blood</string>

    <string name="oxygen_cylinder1">Oxygen cylinder</string>


    <string name="covid_test">Covid Self-Assessment</string>
    <string name="get_statistics">Get statistics</string>
    <string name="blood_donation">Blood Requirement</string>
    <string name="receive_blood">Receive Blood</string>

    <string name="fill_out_the_form">Fill out the form</string>
    <string name="fill_out_the_details">Fill out the details</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="blood_group">Blood group</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="quantity">Quantity</string>
    <string name="enter_the_quantity">Enter quantity in Units</string>
    <string name="city">City</string>
    <string name="mobile">Mobile</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="enter_your_mobile">Enter your mobile</string>
    <string name="plasma_donation">Plasma Requirement</string>
    <string name="receive_plasma">Receive Plasma</string>
    <string name="donate_plasma_a">Donate Plasma</string>
    <string name="enter_your_blood_group1">Enter your blood group</string>

    <string name="receive_oxygen_cylinder">Receive oxygen cylinder</string>
    <string name="donate_oxygen_cylinder">Donate oxygen cylinder</string>
    <string name="enter_your_blood_group">Enter your blood group</string>
    <string name="submit">SUBMIT</string>
    <string name="clear">CLEAR</string>
    <string name="submit1">SUBMIT</string>
    <string name="clear1">CLEAR</string>
    <string name="submit2">SUBMIT</string>
    <string name="clear2">CLEAR</string>

    <string name="save_details">Save Details</string>
    <string name="network_unavailable">No network available</string>
    <string name="wrong_email">Please enter correct email</string>
    <string name="password_email_successful">Reset password email sent. Check your email.</string>
    <string name="name1">Name</string>
    <string name="donor_details">DONOR DETAILS</string>
    <string name="mobile1">Mobile</string>
    <string name="blood_group12">Blood Group</string>
    <string name="blood_group1234">Blood Group</string>
    <string name="email12">Email</string>
    <string name="proceed">Proceed</string>
    <string name="mapsAPIKey">AIzaSyAFsvqUyp6i5kS4Wunt73Qj7pkxBQagU-M</string>


    <string name="dialog_message">Blood Request Form</string>
    <string name="dialog_title">"Blood"</string>

</resources>