<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Oxygen_Cylinder_donation"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_plasma">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="20"
                    android:gravity="center"
                    android:text="@string/oxygen_cylinder"
                    android:textColor="@color/blue"
                    android:textSize="40dp"
                    android:textStyle="italic|bold" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/oxygen_cylinder_donate1"
                    android:layout_width="match_parent"
                    android:layout_height="114dp"
                    android:layout_marginLeft="7sp"
                    android:layout_weight="60"
                    app:lottie_autoPlay="true"
                    app:lottie_rawRes="@raw/oxy_cylinder"
                    app:lottie_repeatCount="10" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:id="@+id/radiogroup3"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20sp"
                        android:layout_gravity="center"
                        android:layout_marginRight="20sp"
                        android:text="@string/receive_oxygen_cylinder"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20sp"
                        android:layout_marginRight="20sp"
                        android:text="@string/donate_oxygen_cylinder"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:text="@string/fill_out_the_details"
                android:textSize="20sp"
                android:textStyle="italic">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text10"
                        android:text="@string/name"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="20sp"
                        android:layout_weight="2"
                        />
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edt1"
                        android:layout_weight="2"
                        android:hint="@string/enter_your_name"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20sp"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:text="@string/blood_group"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edt2"
                        android:layout_width="198dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/enter_your_blood_group" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20sp"
                        android:layout_weight="2"
                        android:text="@string/city"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edt12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/enter_your_city" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20sp"
                        android:layout_weight="2"
                        android:text="@string/quantity"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edt13"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/enter_the_quantity" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20sp"
                        android:layout_weight="2"
                        android:text="@string/mobile"
                        android:textStyle="bold"
                        android:textSize="20sp" />
                    <EditText
                        android:id="@+id/edt14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/enter_your_mobile" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20sp"
                        android:layout_weight="2"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:textSize="20sp" />
                    <EditText
                        android:id="@+id/edt15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/enter_your_email" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bloodDonationSubmitBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/submit2"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/clear2"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>